# NetStatWindows

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app.manifest
.github/workflows/: windows.yml
docs/: ARCHITECTURE.md  BUILDING.md  IMPLEMENTATION_STATUS.md  PRIVACY.md  TESTING.md
packaging/: AppxManifest.xml
resources/: NetStatBar.rc  resource.h
scripts/: build-msix.ps1  build-portable.ps1
src/core/: InterfacePolicy.cpp  InterfacePolicy.h  NetworkRate.h  RateCalculator.cpp  RateCalculator.h  RateFormatter.cpp  RateFormatter.h  ReadoutText.cpp  ReadoutText.h  Settings.cpp  Settings.h
src/windows/: CMakeLists.txt
src/windows/app/: App.cpp  App.h  Main.cpp  Messages.h  SamplingWorker.cpp  SamplingWorker.h  SingleInstance.cpp  SingleInstance.h  StartupMain.cpp
src/windows/platform/: MonotonicClock.cpp  MonotonicClock.h  RegistrySettingsStore.cpp  RegistrySettingsStore.h  StartupManager.cpp  StartupManager.h  TaskbarGapFinder.cpp  TaskbarGapFinder.h  TaskbarLocator.cpp  TaskbarLocator.h  ThemeMonitor.cpp  ThemeMonitor.h  WindowsNetworkSnapshotProvider.cpp  WindowsNetworkSnapshotProvider.h
src/windows/ui/: ReadoutWindow.cpp  ReadoutWindow.h  SettingsWindow.cpp  SettingsWindow.h  TrayIcon.cpp  TrayIcon.h
tests/: CMakeLists.txt  CoreTests.cpp  WindowsPlatformTests.cpp
